fixing name position on graph on mobile

--- a/src/stylus/graph.styl
+++ b/src/stylus/graph.styl
@@ -171,7 +171,10 @@
 				}
 			}
 			@media all and (max-width: 450px) {
-				/.egraph-name { font-size: 10px; }
+				/.egraph-name {
+					bottom: 5%;
+					font-size: 10px;
+				}
 			}
 		}
 		
